# spherical-pip

./: .gitignore  CMakeLists.txt  README.md  REUSE.toml  quick_build.sh
LICENSES/: BSD-3-Clause.txt  LicenseRef-BSD-3-Clause-Inria.txt
build-baseline/: test_gca_constlat_intersection_baseline  test_gca_gca_intersection_baseline  test_library_usage  test_pip_complicated  test_pip_robust  test_psm_compile  test_quadruple3d_basic
include/accusphgeom/: accusphgeom.hpp
include/accusphgeom/adapters/eigen/: gca_constlat_intersection_eigen.hpp
include/accusphgeom/algorithms/: lat_lon_bounds.hpp  point_in_polygon_sphere.hpp
include/accusphgeom/constructions/: gca_constlat_intersection.hpp  gca_gca_intersection.hpp
include/accusphgeom/numeric/: abs.hpp  mask.hpp
include/accusphgeom/predicates/: on_minor_arc.hpp
include/spip/algorithms/: point_in_polygon_sphere.hpp
include/spip/core/: types.hpp
include/spip/kernels/: pip_kernel_adaptive.hpp  pip_kernel_eft.hpp
include/spip/predicates/: orient3d.hpp  pck_filter_config.hpp  quadruple3d.hpp
include/spip/predicates/eft/: basic.hpp  orient3d_eft.hpp  quadruple3d_eft.hpp  simd_fma.hh
src/algorithms/: point_in_polygon_sphere.cpp
src/predicates/: quadruple3d_exact.cpp
tests/: test_gca_constlat_eigen_pack.cpp  test_gca_constlat_intersection_baseline.cpp  test_gca_gca_intersection_baseline.cpp  test_helpers.hpp  test_pip_basic.cpp  test_pip_complicated.cpp  test_pip_complicated_visualization.nb  test_pip_robust.cpp  test_psm_compile.cpp  test_quadruple3d_basic.cpp
tests/mathematica/: README.md  generate_gca_constlat_baseline.m  generate_gca_gca_baseline.m
